fix: tweak dark mode body copy colour

--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -3,7 +3,7 @@ $base-spacing: 8px;
 $palette-black: #000;
 
 $palette-mid--dark: #272727;
-$palette-mid--light: #a3a3a3;
+$palette-mid--light: #aeaeae;
 $palette-mid--lightest: #f6f3f3;
 
 $palette-plain: #fff;
